Added basic loading page features

--- a/browse.html
+++ b/browse.html
@@ -27,6 +27,11 @@
             </form>
         </nav>
     </header>
+    <div id="loading-screen" class="fullscreen-responsive">
+        <div class="ring">Loading
+            <span></span>
+        </div>
+    </div>
     <main class="browse-page">
         <h2>BROWSE ALL COCKTAILS</h2>
         <div class="select-ingredients-container">
@@ -94,7 +99,6 @@
             </div>
         </div>
     </main>
-
 </body>
 </html>
 
