--- a/details.html
+++ b/details.html
@@ -26,6 +26,14 @@
             </form>
         </nav>
     </header>
+    <div id="loading-screen" class="fullscreen-responsive">
+        <div class="ring">Loading
+            <span></span>
+        </div>
+    </div>
+    <main>
+        
+    </main>
     
     <script src="./scripts/script.js"></script>
 </body>
