--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         </nav>
     </header>
 
-    <main class="fullscreen-responsive">
+    <div id="loading-screen" class="fullscreen-responsive">
+        <div class="ring">Loading
+            <span></span>
+        </div>
+    </div>
+
+    <main id="index-page" class="fullscreen-responsive">
         <div class="main-container">
             <form class="search-bar">
                 <div class="decorative-search-border"></div>
