Started displaying images from the API on page

--- a/browse.html
+++ b/browse.html
@@ -34,7 +34,8 @@
     </div>
     <main class="browse-page">
         <h2>BROWSE ALL COCKTAILS</h2>
-        <div class="select-ingredients-container">
+        <div class="cocktail-display-container">
+            <div class="select-ingredients-container">
             <div class="spirits">
                 <h4>SPIRITS</h4>
                 <div class="choose-spirits">
@@ -97,6 +98,8 @@
                     </section>
                 </div>
             </div>
+            </div>
+            <div id="cocktail-container"></div>
         </div>
     </main>
 </body>
