--- a/details.html
+++ b/details.html
@@ -26,33 +26,15 @@
             </form>
         </nav>
     </header>
-
     <div id="loading-screen" class="fullscreen-responsive">
         <div class="ring">Loading
             <span></span>
         </div>
     </div>
-
-    <main id="index-page" class="fullscreen-responsive">
-        <div class="main-container">
-            <form class="search-bar">
-                <div class="decorative-search-border"></div>
-                <input type="text" placeholder="SEARCH FOR A COCKTAIL">
-                <button><img src="./assets/search_icon_accent_yellow.svg"></button>
-            </form>
-            <p>OR</p>
-            <div class="btns-container">
-                <button class="homepage-btn">BROWSE ALL COCKTAILS</button>
-                <button class="homepage-btn">FIND YOUR COCKTAIL MATCH</button>
-                <button class="homepage-btn">DISCOVER A RANDOM COCKTAIL</button>
-            </div>
-        </div>
+    <main>
+        
     </main>
-
-    <footer>
-        <p class="p-small">THE COCKTAIL CACHE, DEVELOPED BY 'TEAM-NAME' 2023</p>
-    </footer>
-
+    
     <script src="./scripts/script.js"></script>
 </body>
 </html>
