--- a/details.html
+++ b/details.html
@@ -21,8 +21,8 @@
             <a href="./quiz.html">QUIZ</a>
             <a id="random-cocktial-nav-btn">RANDOM</a>
             <form class="search-bar nav-search-bar">
-                <input type="text" placeholder="SEARCH FOR A COCKTAIL">
-                <button><img src="./assets/search_icon_accent_yellow.svg"></button>
+                <input type="text" id="nav-search-input" placeholder="SEARCH FOR A COCKTAIL">
+                <button id="nav-search-btn"><img src="./assets/search_icon_accent_yellow.svg"></button>
             </form>
         </nav>
     </header>
