--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <a href="./quiz.html">QUIZ</a>
             <a id="random-cocktial-nav-btn">RANDOM</a>
             <form class="search-bar nav-search-bar">
-                <input type="text" placeholder="SEARCH FOR A COCKTAIL">
-                <button><img src="./assets/search_icon_accent_yellow.svg"></button>
+                <input type="text" id="nav-search-input" placeholder="SEARCH FOR A COCKTAIL">
+                <button id="nav-search-btn"><img src="./assets/search_icon_accent_yellow.svg"></button>
             </form>
         </nav>
     </header>
@@ -37,8 +37,8 @@
         <div class="main-container">
             <form class="search-bar">
                 <div class="decorative-search-border"></div>
-                <input type="text" placeholder="SEARCH FOR A COCKTAIL">
-                <button><img src="./assets/search_icon_accent_yellow.svg"></button>
+                <input type="text" id="main-search-input" placeholder="SEARCH FOR A COCKTAIL">
+                <button id="main-search-btn"><img src="./assets/search_icon_accent_yellow.svg"></button>
             </form>
             <p>OR</p>
             <div class="btns-container">
