test commit for rebase tutorial

--- a/browse.html
+++ b/browse.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <main class="browse-page">
-        <h2>BROWSE ALL COCKTAILS</h2>
+        <h2>BROWSE ALL COCKTAILS!!</h2>
         <div class="cocktail-display-container">
             <div class="select-ingredients-container">
             <div class="spirits">
