WIP: 4 - updated about, css files

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <title></title>
+    <title>The Cocktail Cache - About the Project</title>
 </head>
 
 <body>
@@ -34,10 +34,35 @@
             <span></span>
         </div>
     </div>
+    <div class="content-wrapper">
+        <main>
+            <h1>About the Project</h1>
+            <p>Chuck Norris can 'strangle' you with a cordless phone. When Chuck Norris gives you the finger, he's
+                telling
+                you
+                how many seconds you have left to live. Chuck Norris can kill your imaginary friends. On New Year's Eve,
+                Chuck Norris promised that he'd lose 20 pounds. The next morning he shaved his chest and smiled as he
+                realized that he'd lost 30. Chuck Norris threw a grenade and killed 50 people. Then it exploded.</p>
+        </main>
+        <section>
+            <h1>Meet the Team</h1>
 
-    <main>
-        <h1></h1>
-    </main>
+            <div class="team-card-container">
+
+                <div class="team-card">
+                    <img src="./assets/img/placeholder-squirrel.jpg" alt="photo of team member Art van de Lay">
+                    <h3>Art van de Lay</h3>
+                    <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
+                        minutes
+                        to watch 60 Minutes. Chuck Norris makes onions cry.</p>
+                    <a href="./details.html"><button type="submit">Sweet Vermouth with a Twist</button></a>
+                    <!-- <a href=" LinkedIn "></a> -->
+                </div>
+
+            </div>
+        </section>
+    </div>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
