Added search & predictive search feature

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
             <a href="./browse.html">BROWSE</a>
             <a href="./quiz.html">QUIZ</a>
             <a id="random-cocktail-nav-btn">RANDOM</a>
-            <form class="search-bar nav-search-bar">
-                <input type="text" id="nav-search-input" placeholder="SEARCH FOR A COCKTAIL">
-                <button id="nav-search-btn"><img src="./assets/search_icon_accent_yellow.svg"></button>
+            <form class="search-container">
+                <div class="search-bar nav-search-bar">
+                    <input type="text" id="nav-search-input" placeholder="SEARCH FOR A COCKTAIL">
+                    <button id="nav-search-btn"><img src="./assets/search_icon_accent_yellow.svg"></button>
+                </div>
+                <div id="predictive-search-results">
+                </div>
             </form>
         </nav>
     </header>
@@ -37,10 +41,14 @@
 
     <main id="index-page" class="fullscreen-responsive">
         <div class="main-container">
-            <form class="search-bar">
-                <div class="decorative-search-border"></div>
-                <input type="text" id="main-search-input" placeholder="SEARCH FOR A COCKTAIL">
-                <button id="main-search-btn"><img src="./assets/search_icon_accent_yellow.svg"></button>
+            <form class="main-search-container">
+                <div class="search-bar">
+                    <div class="decorative-search-border"></div>
+                    <input type="text" id="main-search-input" placeholder="SEARCH FOR A COCKTAIL">
+                    <button id="main-search-btn"><img src="./assets/search_icon_accent_yellow.svg"></button>
+                </div>
+                <div id="main-predictive-search-results">
+                </div>
             </form>
             <p>OR</p>
             <div class="btns-container">
