--- a/details.html
+++ b/details.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <title></title>
+    <script src="./scripts/script.js" defer></script>
+    <title>Details Page</title>
 </head>
 
 <body>
@@ -32,9 +33,8 @@
         </div>
     </div>
     <main>
-        
+        <div class="current-cocktail-display"></div>
     </main>
     
-    <script src="./scripts/script.js"></script>
 </body>
 </html>
