WIP #4 - found bug #24; updating about pg

--- a/about.html
+++ b/about.html
@@ -34,16 +34,17 @@
             <span></span>
         </div>
     </div>
+
     <div class="content-wrapper">
         <main>
             <h2>About the Project</h2>
             <p>Chuck Norris can 'strangle' you with a cordless phone. When Chuck Norris gives you the finger, he's
-                telling
-                you
-                how many seconds you have left to live. Chuck Norris can kill your imaginary friends. On New Year's Eve,
-                Chuck Norris promised that he'd lose 20 pounds. The next morning he shaved his chest and smiled as he
+                telling you how many seconds you have left to live. Chuck Norris can kill your imaginary friends. On New
+                Year's Eve, Chuck Norris promised that he'd lose 20 pounds. The next morning he shaved his chest and
+                smiled as he
                 realized that he'd lost 30. Chuck Norris threw a grenade and killed 50 people. Then it exploded.</p>
         </main>
+
         <section>
             <h2>Meet the Team</h2>
 
@@ -55,7 +56,7 @@
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
                         to watch 60 Minutes. Chuck Norris makes onions cry.</p>
-                    <a href="./details.html"><button type="submit">Sweet Vermouth with a Twist</button></a>
+                    <a href="#"><button type="submit">Sweet Vermouth with a Twist</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
