Main function of filter system complete

--- a/browse.html
+++ b/browse.html
@@ -74,6 +74,9 @@
         </div>
         <div id="cocktail-container"></div>
         </div>
+        <div id="no-results">
+            <p id="no-result-message"></p>
+        </div>
     </main>
 </body>
 
