WIP #4 - unfinished, adjusting layout

--- a/about.html
+++ b/about.html
@@ -60,6 +60,36 @@
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
+                <div class="team-card">
+                    <img src="./assets/img/placeholder-squirrel.jpg" alt="photo of team member Art van de Lay">
+                    <h3>Art van de Lay</h3>
+                    <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
+                        minutes
+                        to watch 60 Minutes. Chuck Norris makes onions cry.</p>
+                    <a href="#"><button type="submit">Sweet Vermouth with a Twist</button></a>
+                    <!-- <a href=" LinkedIn "></a> -->
+                </div>
+
+                <div class="team-card">
+                    <img src="./assets/img/placeholder-squirrel.jpg" alt="photo of team member Art van de Lay">
+                    <h3>Art van de Lay</h3>
+                    <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
+                        minutes
+                        to watch 60 Minutes. Chuck Norris makes onions cry.</p>
+                    <a href="#"><button type="submit">Sweet Vermouth with a Twist</button></a>
+                    <!-- <a href=" LinkedIn "></a> -->
+                </div>
+
+                <div class="team-card">
+                    <img src="./assets/img/placeholder-squirrel.jpg" alt="photo of team member Art van de Lay">
+                    <h3>Art van de Lay</h3>
+                    <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
+                        minutes
+                        to watch 60 Minutes. Chuck Norris makes onions cry.</p>
+                    <a href="#"><button type="submit">Sweet Vermouth with a Twist</button></a>
+                    <!-- <a href=" LinkedIn "></a> -->
+                </div>
+
             </div>
         </section>
     </div>
