Fixing the null values

--- a/browse.html
+++ b/browse.html
@@ -61,12 +61,15 @@
                 </div>
                 <div class="additional-options filter-options">
                     <strong>COMPLEXITY</strong>
-                    <div class="selection-container" id="ingreditents">
+                    <div class="complexity-container" id="">
                         
                     </div>
                     <strong>ALCOHOLIC</strong>
-                    <div class="selection-container" id="ingreditents">
-                        
+                    <div class="alcoholic-container" id="">
+                        <input type="radio" id='alcoholic-type'>
+                        <label for="alcoholic-type">Of Course!</label><br>
+                        <input type="radio" id='non-alcoholic'>
+                        <label for="non-alcoholic">No Thanks!</label>
                     </div>
                     <button id="reset-filters-btn">RESET FILTERS</button>
                 </div>
