WIP #4 - unfinished (layout & html)

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
                     <h3>Art van de Lay</h3>
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
-                        to watch 60 Minutes. Chuck Norris makes onions cry.</p>
-                    <a href="#"><button type="submit">Sweet Vermouth with a Twist</button></a>
+                        to watch 60 Minutes.</p>
+                    <a href="#"><button type="submit">Mojito</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
@@ -65,8 +65,8 @@
                     <h3>Art van de Lay</h3>
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
-                        to watch 60 Minutes. Chuck Norris makes onions cry.</p>
-                    <a href="#"><button type="submit">Sweet Vermouth with a Twist</button></a>
+                        to watch 60 Minutes.</p>
+                    <a href="#"><button type="submit">Mojito</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
@@ -75,8 +75,8 @@
                     <h3>Art van de Lay</h3>
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
-                        to watch 60 Minutes. Chuck Norris makes onions cry.</p>
-                    <a href="#"><button type="submit">Sweet Vermouth with a Twist</button></a>
+                        to watch 60 Minutes.</p>
+                    <a href="#"><button type="submit">Old Fashioned</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
@@ -85,8 +85,8 @@
                     <h3>Art van de Lay</h3>
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
-                        to watch 60 Minutes. Chuck Norris makes onions cry.</p>
-                    <a href="#"><button type="submit">Sweet Vermouth with a Twist</button></a>
+                        to watch 60 Minutes.</p>
+                    <a href="#"><button type="submit">Whiskey Sour</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
