--- a/browse.html
+++ b/browse.html
@@ -60,16 +60,17 @@
                     </div>
                 </div>
                 <div class="additional-options filter-options">
-                    <strong>COMPLEXITY</strong>
-                    <div class="complexity-container" id="">
-                        
+                    <strong>MAX INGREDIENTS</strong>
+                    <div class="selection-container">
+                        <input type="range" min="1" value="16" max="16" id="complexity-slider">
+                        <p id="complexity-message">FILTER OFF</p>
                     </div>
                     <strong>ALCOHOLIC</strong>
-                    <div class="alcoholic-container" id="">
-                        <input type="radio" id='alcoholic-type'>
-                        <label for="alcoholic-type">Of Course!</label><br>
-                        <input type="radio" id='non-alcoholic'>
-                        <label for="non-alcoholic">No Thanks!</label>
+                    <div class="selection-container">
+                        <input type="radio" id='contains-alcohol' name="alcoholic-filter-option">
+                        <label for="contains-alcohol">Of Course!</label><br>
+                        <input type="radio" id='no-contains-alcohol' name="alcoholic-filter-option">
+                        <label for="no-contains-alcohol">No Thanks!</label>
                     </div>
                     <button id="reset-filters-btn">RESET FILTERS</button>
                 </div>
